--- a/deltafi-ui/src/styles/pages/deltafile-upload-page.scss
+++ b/deltafi-ui/src/styles/pages/deltafile-upload-page.scss
@@ -31,6 +31,7 @@
     }
     .filename-column {
       width: 45%;
+      overflow-wrap: anywhere;
     }
     .flow-column {
       width: 10%;
