--- a/deltafi-ui/src/styles/pages/errors-page.scss
+++ b/deltafi-ui/src/styles/pages/errors-page.scss
@@ -13,6 +13,9 @@
     .p-panel-content {
       padding: 0;
       border: none;
+      td.filename-column {
+        overflow-wrap: anywhere;
+      }
     }
   }
   .p-datatable.p-datatable-striped .p-datatable-tbody > tr.p-highlight {
